bug 184086, number conversion in XSLT is LOCALE independent, r=sicking, sr=jag